# draw-rf

./: .gitignore  404.html  README.md  pyproject.toml  todo.html
docs/: 1-initial-structure.md
docs/draw-rf/: book.toml
docs/draw-rf/book/: 404.html  development.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/draw-rf/src/: SUMMARY.md
src/: cli.py  ring_slot.s2p
