[tool.poetry]
name = "draw-rf"
version = "0.1.0"
description = "A Simple Library for drawing RF circuits from measurement file"
authors = ["rasmusravn <rasmusravna@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "draw_rf"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
